force-app/main/default/objects/Account/fields/Account_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_Formula__c</fullName>
    <formula>TEXT(Type)</formula>
    <label>Account Type (Formula)</label>
    <type>Text</type>
</CustomField>