force-app/main/default/objects/Account/fields/Buy_Resell_Account__c.field-meta.xml
<CustomField>
    <fullName>Buy_Resell_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by admins to identify what accounts are representative accounts so we can better identify buy resell opportunities</description>
    <label>Buy Resell Account</label>
    <type>Checkbox</type>
</CustomField>