force-app/main/default/objects/Account/fields/Data_Load_ID__c.field-meta.xml
<CustomField>
    <fullName>Data_Load_ID__c</fullName>
    <externalId>true</externalId>
    <label>Data Load ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>