force-app/main/default/objects/Account/fields/Groth_Selling_Entity__c.field-meta.xml
<CustomField>
    <fullName>Groth_Selling_Entity__c</fullName>
    <label>Groth Selling Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Selling_Entity</valueSetName>
    </valueSet>
</CustomField>