force-app/main/default/objects/Account/fields/House_Account__c.field-meta.xml
<CustomField>
    <fullName>House_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>House Account</label>
    <type>Checkbox</type>
</CustomField>