force-app/main/default/objects/Account/fields/IFS_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>IFS_Account_Number__c</fullName>
    <label>IFS Account Number*</label>
    <length>50</length>
    <type>Text</type>
</CustomField>