force-app/main/default/objects/Account/fields/Last_audit_completed_by_and_date__c.field-meta.xml
<CustomField>
    <fullName>Last_audit_completed_by_and_date__c</fullName>
    <label>Last audit completed by and date</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>