force-app/main/default/objects/Account/fields/OEM_Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>OEM_Sales_Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OEM Sales Channel</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select OEM Channel Accounts</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner &amp; House Account</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>startsWith</operation>
            <value>OEM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (OEM Sales Channel)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>