force-app/main/default/objects/Account/fields/Payment_Contact__c.field-meta.xml
<CustomField>
    <fullName>Payment_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Contacts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>