force-app/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <defaultValue>&quot;30&quot;</defaultValue>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BM</fullName>
                <label>Cash Due Before Manufacturing</label>
            </value>
            <value>
                <fullName>BS</fullName>
                <label>Cash Due Before Shipping</label>
            </value>
            <value>
                <fullName>30</fullName>
                <default>true</default>
                <label>30 Days Net</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>35 Days Net</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>45 Days Net</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>60 Days Net</label>
            </value>
            <value>
                <fullName>75</fullName>
                <label>75 Days Net</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>90 Days Net</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>120 Days Net</label>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>55</fullName>
            </value>
            <value>
                <fullName>65</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>