force-app/main/default/objects/Account/fields/Prospect_Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Rep_Code__c</fullName>
    <label>Prospect Rep Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>