force-app/main/default/objects/Account/fields/Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Ref_No__c</fullName>
    <externalId>true</externalId>
    <label>Ref No</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>