force-app/main/default/objects/Account/fields/Rep_Account_without_Community_Users__c.field-meta.xml
<CustomField>
    <fullName>Rep_Account_without_Community_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to help in reporting to get Contacts at rep firms for mailing list.</description>
    <label>Rep Account without Community Users</label>
    <type>Checkbox</type>
</CustomField>