force-app/main/default/objects/Account/fields/Rep_Code_Account__c.field-meta.xml
<CustomField>
    <fullName>Rep_Code_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep Code</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please choose valid partner account</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner &amp; House Account</value>
        </filterItems>
        <filterItems>
            <field>Account.Rep_Code__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>