force-app/main/default/objects/Account/fields/Rep_Code_District__c.field-meta.xml
<CustomField>
    <fullName>Rep_Code_District__c</fullName>
    <formula>Text(Rep_Code_Account__r.District__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep Code District</label>
    <type>Text</type>
</CustomField>