force-app/main/default/objects/Account/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <label>Tax Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CA1</fullName>
            </value>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>CBA</fullName>
            </value>
            <value>
                <fullName>CC1</fullName>
            </value>
            <value>
                <fullName>CCO</fullName>
            </value>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>CIM</fullName>
            </value>
            <value>
                <fullName>CK</fullName>
            </value>
            <value>
                <fullName>CL2</fullName>
            </value>
            <value>
                <fullName>CLA</fullName>
            </value>
            <value>
                <fullName>CLK</fullName>
            </value>
            <value>
                <fullName>CMA</fullName>
            </value>
            <value>
                <fullName>CMO</fullName>
            </value>
            <value>
                <fullName>COR</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>CS1</fullName>
            </value>
            <value>
                <fullName>CSB</fullName>
            </value>
            <value>
                <fullName>CSC</fullName>
            </value>
            <value>
                <fullName>CSD</fullName>
            </value>
            <value>
                <fullName>CSF</fullName>
            </value>
            <value>
                <fullName>CSJ</fullName>
            </value>
            <value>
                <fullName>CSL</fullName>
            </value>
            <value>
                <fullName>CSM</fullName>
            </value>
            <value>
                <fullName>CSN</fullName>
            </value>
            <value>
                <fullName>CSO</fullName>
            </value>
            <value>
                <fullName>CSU</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>CV1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>