force-app/main/default/objects/Account/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <label>Total Revenue</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>