force-app/main/default/objects/Account/recordTypes/Partner_House_Account.recordType-meta.xml
<RecordType>
    <fullName>Partner_House_Account</fullName>
    <active>true</active>
    <description>All rep code accounts are assigned to &quot;Partner &amp; House Account&quot; record type</description>
    <label>Partner &amp; House Account</label>
</RecordType>