force-app/main/default/objects/Account/validationRules/Restrict_Partner_To_Update_Customer_Acnt.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Partner_To_Update_Customer_Acnt</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL($User.UserType,&quot;PowerPartner&quot;), ISPICKVAL(Relationship__c, &quot;Customer&quot;)
)</errorConditionFormula>
    <errorMessage>Sorry, this Account can only be edited by CDC/Groth personnel. Please reach out to a CDC/Groth Employee via phone, email, or assigning a Task to assist you with making a change.</errorMessage>
</ValidationRule>