force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Number__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Visibility_Customer_ID__c</columns>
    <columns>External_ID__c</columns>
    <columns>Relationship__c</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>Rep_Code_Account__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
        <value>true</value>
    </filters>
    <label>All Accounts</label>
</ListView>