force-app/main/default/objects/Account/listViews/Customer_Accounts_Only.listView-meta.xml
<ListView>
    <fullName>Customer_Accounts_Only</fullName>
    <booleanFilter>(1 or 2) and 3</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Number__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Visibility_Customer_ID__c</columns>
    <columns>Relationship__c</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>Rep_Code_Account__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Visibility_Customer_ID__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Relationship__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Customer_Account</value>
    </filters>
    <label>Customer Accounts Only</label>
</ListView>