force-app/main/default/objects/Account/listViews/OEM_Accounts.listView-meta.xml
<ListView>
    <fullName>OEM_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Rep_Code_Account__c</columns>
    <columns>Rep_Code_Formula__c</columns>
    <columns>Rep_Code_District__c</columns>
    <columns>Rep_Code_Region__c</columns>
    <columns>OEM__c</columns>
    <columns>OEM_Sales_Channel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OEM__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>OEM Accounts</label>
</ListView>