force-app/main/default/objects/Account/listViews/Parent_Accounts.listView-meta.xml
<ListView>
    <fullName>Parent_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Rep_Code__c</columns>
    <columns>Rep_Code_Account__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Parent_Account</value>
    </filters>
    <label>Parent Accounts</label>
</ListView>