force-app/main/default/objects/Account/listViews/Partner_Accounts.listView-meta.xml
<ListView>
    <fullName>Partner_Accounts</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>Rep_Code__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>District__c</columns>
    <columns>Region__c</columns>
    <columns>External_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.IS_PARNTER</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Partner_House_Account</value>
    </filters>
    <label>Partner Accounts</label>
</ListView>