force-app/main/default/objects/Account/listViews/Ship_To_Accounts.listView-meta.xml
<ListView>
    <fullName>Ship_To_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Rep_Code__c</columns>
    <columns>ACCOUNT.IS_PARNTER</columns>
    <columns>Rep_Code_Account__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Customer_Account</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Ship-To</value>
    </filters>
    <label>Ship-To Accounts</label>
</ListView>